# djcheckup

./: .gitignore  .pre-commit-config.yaml  LICENSE  README.md  justfile  noxfile.py  pyproject.toml  ruff.toml
.github/workflows/: publish.yml  test.yml
src/djcheckup/: __init__.py  api.py  check_defs.py  checks.py  cli.py  output_json.py  output_rich.py  outputs.py  protocols.py  run.py
src/djcheckup_cli/: __init__.py  check_defs.py  check_runner.py  check_types.py  checks.py  dataclasses.py  enums.py  output_rich.py  run.py
tests/: test_check_defs.py  test_check_types.py  test_interfaces.py  test_sitechecker.py
