[project]
name = "djcheckup"
version = "0.2.5"
description = "DJ Checkup is a security scanner for Django sites."
readme = "README.md"
authors = [{ name = "Stuart Maxwell", email = "stuart@amanzi.nz" }]
requires-python = ">=3.10"
dependencies = ["httpx>=0.28.1", "rich>=14.1.0", "typer>=0.17.4"]
license = { file = "LICENSE" }

[project.scripts]
djcheckup = "djcheckup.cli:app"

[project.urls]
Homepage = "https://github.com/stuartmaxwell/djcheckup"
Repository = "https://github.com/stuartmaxwell/djcheckup"

[build-system]
requires = ["uv_build>=0.8.13,<0.9.0"]
build-backend = "uv_build"

[tool.ruff]
line-length = 120
target-version = "py313"

[tool.ruff.lint]
select = ["ALL"]

[tool.pyrefly]
project-includes = ["src/djcheckup/**"]

[tool.ruff.lint.extend-per-file-ignores]
"tests/**" = ["S101", "ANN201", "ANN001", "ARG001", "PT011", "PGH003", "SLF001"]

[tool.ruff.lint.pydocstyle]
convention = "google" # Accepts: "google", "numpy", or "pep257".

[dependency-groups]
dev = ["nox>=2025.5.1", "pyrefly>=0.34.0", "pytest>=8.4.2", "pytest-cov>=7.0.0"]

[tool.pytest.ini_options]
pythonpath = "."
python_files = "test_*.py"

[tool.coverage.html]
show_contexts = true

[tool.coverage.run]
branch = true
include = ["src/djcheckup/**"]

[tool.coverage.report]
# exclude_lines = ["if TYPE_CHECKING:", "# pragma: no cover"]
