[project]
name = "djcheckup"
version = "0.8.0"
description = "DJ Checkup is a security scanner for Django sites."
readme = "README.md"
authors = [
    { name = "Stuart Maxwell", email = "stuart@amanzi.nz" },
]
requires-python = ">=3.10"
dependencies = [
    "rich~=15.0",
    "typer~=0.24",
    "httpxyz~=0.30",
]
license = { file = "LICENSE" }
classifiers = [
    "Programming Language :: Python",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Programming Language :: Python :: 3.14",
]

[dependency-groups]
dev = [
    "nox[pbs]~=2026.4",
    "pre-commit~=4.5",
    "pytest~=9.0",
    "pytest-cov~=7.1",
    "mypy~=1.20",
]

[project.scripts]
djcheckup = "djcheckup.cli:app"

[project.urls]
Homepage = "https://github.com/stuartmaxwell/djcheckup"
Repository = "https://github.com/stuartmaxwell/djcheckup"

[build-system]
requires = ["pdm-backend"]
build-backend = "pdm.backend"

[tool.pdm]
distribution = true


[tool.pytest.ini_options]
pythonpath = "."
python_files = "test_*.py"

[tool.coverage.html]
show_contexts = true

[tool.coverage.run]
branch = true
include = ["src/djcheckup/**"]

[tool.coverage.report]
# exclude_lines = ["if TYPE_CHECKING:", "# pragma: no cover"]
